adding signin functionality

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO = "mongodb+srv://sanyam:sanyam@mern-auth.obqo82e.mongodb.net/?retryWrites=true&w=majority&appName=mern-auth"
+JWT_SECRET= "mysecretkey"
